--- a/src/blocks/slides/slides.scss
+++ b/src/blocks/slides/slides.scss
@@ -13,5 +13,18 @@
     background: url('./images/hearts.svg') center / contain no-repeat;
     width: 382px;
     height: 125px;
+
+    @media (max-width: $screen-m) {
+      width: 128px;
+      height: 45px;
+      right: 30px;
+    top: -5px;
+    }
+  }
+
+  &__section-title {
+    @media (max-width: $screen-s) {
+      max-width: 200px;
+    }
   }
 }
