--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -34,6 +34,8 @@
 
     @media (max-width: $screen-s) {
       column-gap: 29px;
+      justify-self: flex-start;
+      transform: translateX(349px);
     }
   }
 
