--- a/src/blocks/chanel-banner/chanel-banner.scss
+++ b/src/blocks/chanel-banner/chanel-banner.scss
@@ -4,9 +4,20 @@
   align-items: center;
   justify-content: space-between;
 
+  @media screen and (max-width: 375px) {
+    padding: 0 20px 68px 20px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
   &__content {
     display: flex;
     column-gap: 60px;
+    position: relative;
+
+    @media screen and (max-width: 375px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__title {
@@ -14,8 +25,12 @@
     font-size: 32px;
     line-height: 130%;
     margin: 0;
-    margin-bottom: 2px;
+    margin-bottom: 4px;
     padding: 0;
+
+    @media screen and (max-width: 375px) {
+      font-size: 24px;
+    }
   }
 
   &__caption {
@@ -24,12 +39,24 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 130%;
+
+    @media screen and (max-width: 375px) {
+      font-size: 14px;
+    }
   }
 
   &__image {
     width: 75px;
     height: 65px;
     background: url('./images/tg-big.svg') center / contain no-repeat;
+
+    @media screen and (max-width: 375px) {
+      position: absolute;
+      bottom: -50px;
+      right: 20%;
+      width: 50px;
+      height: 45px;
+    }
   }
 
   &__button {
@@ -43,6 +70,12 @@
 
     &:active {
       transform: scale(.97);
+    }
+
+    @media screen and (max-width: 375px) {
+      padding: 9px 16px;
+      font-size: 14px;
+      line-height: 18px;
     }
   }
 }
