--- a/src/blocks/questions/questions.scss
+++ b/src/blocks/questions/questions.scss
@@ -1,6 +1,10 @@
 .questions {
   padding-bottom: 128px;
 
+  @media screen and (max-width: 375px) {
+    padding-bottom: 36px;
+  }
+
   &__accordeon {
     margin: 0;
     padding: 0;
@@ -35,6 +39,10 @@
       max-height: 500px;
       padding: 20px 200px 20px 40px;
       transition: max-height .3s;
+
+      @media screen and (max-width: 375px) {
+        padding: 20px;
+      }
     }
   }
 
@@ -61,6 +69,12 @@
       height: 32px;
       background: url("./images/chevron-up.svg") center / cover no-repeat;
       transition: all .2s ease;
+      flex-shrink: 0;
+    }
+
+    @media screen and (max-width: 375px) {
+      padding: 20px;
+      font-size: 16px;
     }
   }
 
@@ -80,5 +94,9 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 1.3;
+
+    @media screen and (max-width: 375px) {
+      font-size: 14px;
+    }
   }
 }
