--- a/src/blocks/section-1/section-1.scss
+++ b/src/blocks/section-1/section-1.scss
@@ -87,5 +87,13 @@
     @media screen and (max-width: 900px) {
       margin-bottom: 20px;
     }
+
+    &:hover {
+      opacity: .8;
+    }
+
+    &:active {
+      transform: scale(.97);
+    }
   }
 }
