--- a/src/blocks/quizz/quizz.scss
+++ b/src/blocks/quizz/quizz.scss
@@ -60,6 +60,14 @@
     margin-left: 24px;
     max-height: 60px;
     min-width: 267px;
+
+    &:hover {
+      opacity: .8;
+    }
+
+    &:active {
+      transform: scale(.97);
+    }
     @media screen and (max-width: 660px) {
       margin-left: 0;
       min-width: 223px;
