--- a/src/blocks/vacancy-form/vacancy-form.scss
+++ b/src/blocks/vacancy-form/vacancy-form.scss
@@ -246,6 +246,14 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  &:hover {
+    opacity: .8;
+    cursor: pointer;
+  }
+
+  &:active {
+    transform: scale(.97);
+  }
 
   @media(max-width: $screen-m){
     width: 100%;
