исправлен скролл в секции Slider

--- a/src/blocks/teaching/teaching.scss
+++ b/src/blocks/teaching/teaching.scss
@@ -57,6 +57,7 @@
     @media (max-width: $screen-m) {
       grid-template-columns: 90px auto;
       grid-template-rows: minmax(139px, 172px);
+      // justify-items: center;
     }
 
     &_right {
