--- a/src/blocks/section-title/section-title.scss
+++ b/src/blocks/section-title/section-title.scss
@@ -12,8 +12,8 @@
     font-size: 24px;
     margin-bottom: 24px;
   }
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: $screen-s) {
     font-size: 24px;
-    margin-left: 0;
+    margin-left: 20px;
   }
 }
