--- a/src/blocks/slides/slides.scss
+++ b/src/blocks/slides/slides.scss
@@ -10,6 +10,11 @@
     padding-bottom: 68px;
   }
 
+  &__container {
+    width: 100vw;
+    overflow: hidden;
+  }
+
   &__hearts {
     position: absolute;
     right: 90px;
@@ -22,7 +27,7 @@
       width: 128px;
       height: 45px;
       right: 30px;
-    top: -5px;
+      top: -5px;
     }
   }
 
