--- a/src/blocks/vacancy/vacancy.scss
+++ b/src/blocks/vacancy/vacancy.scss
@@ -1,7 +1,7 @@
 .vacancy {
   padding-bottom: 86px;
 
-  @media screen and (max-width: 375px) {
+  @media screen and (max-width: 425px) {
     padding-bottom: 68px;
   }
 
@@ -9,7 +9,7 @@
     width: fit-content;
     position: relative;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       width: 70%;
     }
 
@@ -85,7 +85,7 @@
       width: 100%;
     }
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 10px 16px;
       font-size: 16px;
     }
@@ -128,7 +128,7 @@
       box-shadow: unset;
     }
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 10px 32px;
       font-size: 16px;
     }
@@ -140,8 +140,10 @@
 
   &__filter-items-wrapper {
     border-radius: $cards-border-radius;
-    overflow-x: hidden;
+    overflow-x: scroll;
     flex-grow: 1;
+    @include hide-scroll-bar;
+    position: relative;
   }
 
   &__filter-items {
@@ -156,7 +158,7 @@
     display: flex;
     align-items: center;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 10px 16px;
       column-gap: 16px;
     }
@@ -169,7 +171,7 @@
     line-height: 130%;
     color: $dark-grey-color;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 16px;
     }
   }
@@ -197,7 +199,7 @@
       display: block;
     }
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 20px;
       background-size: 48px 48px;
       background-position: 90% 45%;
@@ -211,7 +213,7 @@
     font-size: 20px;
     line-height: 130%;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 14px;
     }
   }
@@ -224,7 +226,7 @@
     font-size: 20px;
     line-height: 130%;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 14px;
     }
   }
@@ -238,7 +240,7 @@
     padding: 0;
     list-style: none;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       grid-template-columns: 1fr;
     }
   }
@@ -269,7 +271,7 @@
       }
     }
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 20px;
       min-height: unset;
       row-gap: 8px;
@@ -284,7 +286,7 @@
     line-height: 130%;
 
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 14px;
     }
   }
@@ -297,7 +299,7 @@
     font-size: 18px;
     line-height: 130%;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 14px;
     }
   }
@@ -310,7 +312,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 20px;
       flex-direction: column;
       row-gap: 20px;
@@ -333,7 +335,7 @@
     line-height: 130%;
     color: $content-primary-color;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 24px;
     }
   }
@@ -346,7 +348,7 @@
     line-height: 1.3;
     color: $content-primary-color;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       font-size: 14px;
     }
   }
@@ -369,7 +371,7 @@
       transform: scale(.97);
     }
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 425px) {
       padding: 9px 16px;
       font-size: 14px;
     }
