--- a/src/blocks/quizz/quizz.scss
+++ b/src/blocks/quizz/quizz.scss
@@ -60,6 +60,7 @@
     margin-left: 24px;
     max-height: 60px;
     min-width: 267px;
+    background-color: $cards-bg-color;
 
     &:hover {
       opacity: .8;
