fixes width of teaching item

--- a/src/blocks/teaching/teaching.scss
+++ b/src/blocks/teaching/teaching.scss
@@ -45,7 +45,7 @@
 
   &__links-box {
     display: grid;
-    grid-template-columns: minmax(min-content, max-content) 160px;
+    grid-template-columns: minmax(min-content, 1fr) 158px;
   }
 
   &__link {
@@ -198,6 +198,10 @@
     &_all {
       width: 123px;
       background-color: $black-color;
+
+      @media (max-width: $screen-s) {
+        width: 118px;
+      }
     }
   }
 
