fix: popups adaptive

--- a/src/blocks/popup/popup.scss
+++ b/src/blocks/popup/popup.scss
@@ -26,7 +26,7 @@
     min-height: 100px;
     min-width: 100px;
     background: $cards-bg-color;
-    border-radius: $cards-border-radius;
+    border-radius: 50px;
     position: relative;
 
     &_type_video {
