fix:section paddings

--- a/src/blocks/expectations/expectations.scss
+++ b/src/blocks/expectations/expectations.scss
@@ -1,10 +1,15 @@
 .expectations {
   padding-bottom: 128px;
-  overflow: hidden;  //убрать
 
   @media (max-width: $screen-s) {
-    max-width: 340px;
+    width: calc(100% - 40px);
     padding-bottom: 68px;
+  }
+
+  &__title {
+    @media (max-width: $screen-s) {
+      margin-left: 0;
+    }
   }
 
   &__card {
