--- a/src/blocks/vacancy/vacancy.scss
+++ b/src/blocks/vacancy/vacancy.scss
@@ -1,6 +1,11 @@
 .vacancy {
   padding-bottom: 86px;
 
+  @media screen and (max-width: 480px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   @media screen and (max-width: 425px) {
     padding-bottom: 68px;
   }
@@ -8,6 +13,7 @@
   &__title {
     width: fit-content;
     position: relative;
+    margin-left: 0;
 
     @media screen and (max-width: 425px) {
       width: 70%;
