--- a/src/blocks/what-give/what-give.scss
+++ b/src/blocks/what-give/what-give.scss
@@ -68,7 +68,7 @@
 
   &__card:nth-child(2) {
     top: 25%;
-    left: 7%;
+    left: 6vw;
     border-bottom-left-radius: 30px;
     width: 290px;
     transition-delay: 0.5s;
@@ -79,7 +79,7 @@
 
   &__card:nth-child(3) {
     top: 55%;
-    left: 7%;
+    left: 6vw;
     border-bottom-left-radius: 30px;
     width: 250px;
     transition-delay: 0.7s;
