--- a/src/blocks/questions/questions.scss
+++ b/src/blocks/questions/questions.scss
@@ -6,17 +6,13 @@
   }
 
   &__accordeon {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     list-style: none;
     width: 100%;
     display: flex;
     flex-direction: column;
     row-gap: 4px;
-
-    @media screen and (max-width: 480px) {
-      width: calc(100% - 40px);
-    }
   }
 
   &__accordeon-item {
