--- a/src/blocks/vacancy-form/vacancy-form.scss
+++ b/src/blocks/vacancy-form/vacancy-form.scss
@@ -3,9 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 80vh;
-  overflow-y: scroll;
-  @include hide-scroll-bar;
 
   @media(max-width: $screen-m){
     padding: 56px 40px;
@@ -29,6 +26,7 @@
       margin: 0 0 24px 0;
     }
   }
+
 }
 
 .vacancy-form__fieldset{
@@ -147,10 +145,10 @@
 
   @media(max-width: $screen-m){
     width: 100%;
-    margin-top: 8px;
   }
 
 }
+
 
 .vacancy-form__textarea{
 	width: 100%;
@@ -170,6 +168,7 @@
   font-size: 12px;
   line-height: 16px;
   display: block;
+  height: 16px;
 }
 
 .vacancy-form__input-box{
@@ -189,6 +188,8 @@
   }
 }
 
+
+
 .vacancy-form__input-title{
 	margin: 0 0 0 12px;
   width: 192px;
@@ -197,7 +198,6 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  position: relative;
 
   @media(max-width: $screen-m){
     width: 100%;
@@ -210,7 +210,14 @@
     height: 8px;
     background: no-repeat center/100% url('./images/star.svg');
     position: absolute;
-    left: -10px;
+    left: 96px;
+    @media(max-width: $screen-m){
+      left: 40px;
+
+    }
+    @media(max-width: $screen-s){
+      left: 20px;
+    }
   }
 
   &_ta{
@@ -226,7 +233,7 @@
 
 .vacancy-form__button{
   margin: 40px 0 0 0;
-  padding: 20px 24px;
+  padding: 0;
   width: 315px;
   height: 60px;
   border: 0;
